# AMATH582FinalProject

./: README.md  load.py  pca_modes.py  pipeline.py  plots.py  preprocess.py  preprocess_cwt.py  pyproject.toml  references.bib  report.tex
notebooks/: Load Data.ipynb  Model Evaluation.ipynb  Model Selection.ipynb  PCA.ipynb  Spectrograms.ipynb
