[tool.poetry]
name = "amath582finalproject"
version = "0.1.0"
description = ""
authors = ["tqhdesilva <tdesilvaqihao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.0"
pandas = "^1.0.1"
pyarrow = "^0.16.0"
scipy = "^1.4.1"
sklearn = "^0.0"
tqdm = "^4.43.0"
imbalanced-learn = "^0.6.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
